--- a/notebooks/iros2020.Rmd
+++ b/notebooks/iros2020.Rmd
@@ -10,6 +10,8 @@ output:
     number_sections: true
 ---
 
+**TODO**: Update the IVs in this markdown file
+
 ```{r, message=F, warning=F}
 library(car)
 library(stats)
@@ -133,6 +135,7 @@ loadCSV = function(filename, age_group_fill, contrast_func) {
     file.path(data_folder, filename),
     col_types = cols(
       study_condition = col_factor(),
+      suggestion_type = col_factor(levels = c("NONE", "AX", "DX", "DXAX")),
       noise_level = col_factor(ordered = T),
       gender = col_factor(levels = c("F", "M", "U")),
       age_group = col_factor(levels = seq(from = 0, to = 8)),
@@ -174,6 +177,10 @@ loadCSV = function(filename, age_group_fill, contrast_func) {
   contrasts(dat$has_dx) = contrast_func(2)
   contrasts(dat$has_noise) = contrast_func(2)
   contrasts(dat$has_dxax) = contrast_func(2)
+  contrasts(dat$has_ax_only) = contrast_func(2)
+  contrasts(dat$has_dx_only) = contrast_func(2)
+  contrasts(dat$has_suggestions) = contrast_func(2)
+  contrasts(dat$suggestion_type) = contr.treatment(4)  # This is a hardcode
 
   contrasts(dat$noise_level_f) = contrast_func(length(levels(dat$noise_level_f)))
   
@@ -269,7 +276,8 @@ These are metrics where an individual unit of analysis is the user.
 plot_df = users %>%
   select(X1, id, study_condition, start_condition, num_optimal,
          age_group, gender, robot_experience,
-         noise_level, noise_level_f, has_noise, has_dx, has_ax,
+         noise_level, noise_level_f, has_noise,
+         has_dx, has_ax, has_ax_only, has_dx_only, has_dxax,
          scenario_completed)
 text_short(report(plot_df))
 ```
@@ -386,7 +394,8 @@ saveModel(scenario_completed.model.null)
 
 # The trend model to see if there is a trend in the noise level variable
 scenario_completed.model.t = brm(
-  scenario_completed ~ 0 + Intercept + ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
+  # scenario_completed ~ 0 + Intercept + ((has_dx + has_ax) * noise_level) + (gender + age_group + robot_experience) + num_optimal,
+    scenario_completed ~ 0 + Intercept + (has_ax_only + has_dx_only + has_dxax + noise_level) + (gender + age_group + robot_experience) + num_optimal,
   family = "bernoulli",
   prior = set_prior("normal(0, 10)", class = "b"),
   data = plot_df,
@@ -400,7 +409,8 @@ saveModel(scenario_completed.model.t)
 
 # The values model, to see if specific values of the noise level variable are significant
 scenario_completed.model.v = brm(
-  scenario_completed ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
+  # scenario_completed ~ 0 + Intercept + ((has_dx + has_ax) * noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
+    scenario_completed ~ 0 + Intercept + (has_ax_only + has_dx_only + has_dxax + noise_level_f) + (gender + age_group + robot_experience) + num_optimal,
   family = "bernoulli",
   prior = set_prior("normal(0, 10)", class = "b"),
   data = plot_df,
